# soohoonc.github.io

./: .gitignore  .prettierignore  .prettierrc  404.html  BUILD_ID  CNAME  README.md  about.html  about.txt  app-build-manifest.json  app-path-routes-manifest.json  asset-manifest.json  build-manifest.json  build.sh  bun.lockb  experience.html  experience.txt  index.html  index.txt  manifest.json  misc.html  misc.txt  next-minimal-server.js.nft.json  next-server.js.nft.json  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  prerender-manifest.js  prerender-manifest.json  projects.html  projects.txt  required-server-files.json  routes-manifest.json  rust-project.json  server.js  tailwind.config.js  tailwind.config.ts  trace  tsconfig.json
.github/workflows/: deploy.yml  nextjs.yml  pages.yml
content/: 1-plus-1-geq-2.md  5-years-eng.md  5-years-swe.md  good-ai-code.md
content/project/: greptile.md
public/: CNAME  feed.xml  hojakdo.txt  index.html  life.js  styles.css
server/: app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json
src/: App.tsx  build.js  index.tsx  serve.js
src/kernel/: Cargo.toml
src/kernel/src/: lib.rs
src/wasm/: Cargo.toml
src/wasm/src/: directory.rs  file.rs  lib.rs
src/wasm/src/files/: about  help  license  source  timeline
src/wasm/src/filesystem/: create.rs  directory.rs  file.rs  mod.rs  node.rs  pipe.rs  symlink.rs
src/wasm/src/fs/: directory.rs  file.rs  mod.rs  node.rs  pipe.rs
src/wasm/src/shell/: exec.rs  lexer.rs  mod.rs
templates/: blog.html  post.html
(+252 files in other folders)
