[package]
name = "soohoonc_wasm"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "soohoonc_wasm"
crate-type = ["cdylib"]
bench = true

[dependencies]
wasm-bindgen = "0.2.83"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }
web-sys = { version = "0.3.66", features = ["console"] }
once_cell = "1.19.0"
